sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: value stop is not a member of object Boolean
	Boolean stop = false;
                ^AlgBubbleSort1:6: error: not found: value stop
		stop = true;
                ^AlgBubbleSort1:9: error: not found: value j
				echange(i,j);
                                          ^AlgBubbleSort1:10: error: not found: value stop
				stop = false;
                                ^AlgBubbleSort1:13: error: not found: value stop
	}while(!stop)
                ^